--- a/algamoney-ui/src/app/core/sidebar/sidebar.component.html
+++ b/algamoney-ui/src/app/core/sidebar/sidebar.component.html
@@ -13,7 +13,7 @@
       <div href="" class="navHeight">
         <p class="displayDate">{{ displayDate }}</p>
         <p class="time">{{ displayTime }}</p>
-      </div>
+    </div>
       <a href="" class="rightAlign">
         <i class="fas fa-regular fa-right-from-bracket"  pTooltip="Sair" tooltipPosition="top"></i>
       </a>
@@ -24,21 +24,24 @@
       <img [src]="profileSrc" alt="">
       <h3>{{ namePerfil }}</h3>
     <ul>
-      <!-- <li><i class="fa-brands fa-facebook"></i><a href="" class="teste"></a></li>
-      <li><i class="fa-brands fa-twitter"></i><a href=""></a></li>
-      <li><i class="fa-brands fa-instagram"></i><a href=""></a></li> -->
       <li pTooltip="Configurações"><i class="fa fa-cog" aria-hidden="true"></i><a href=""></a></li>
     </ul>
   </div>
-    <ul>
+    <ul class="main-menu">
       <li><a href="" routerLinkActive="active"><i class="fas fa-tachometer-alt"></i>{{ dashboard }}</a></li>
       <li><a href=""><i class="fa fa-list-alt" aria-hidden="true"></i>{{ categoria }}</a></li>
       <li routerLinkActive="active"><a  routerLinkActive="active" routerLink="pessoas"><i class="fa fa-user" aria-hidden="true"></i>{{ pessoas }}</a></li>
       <li routerLinkActive="active"><a routerLinkActive="active" routerLink="lancamentos"><i class='fa fa-laptop'></i>{{ lancamentos }}</a></li>
+    </ul>
+    <ul class="logout-footer">
+      <li>
+        <a href="">
+          <i class="fas fa-regular fa-right-from-bracket" pTooltip="Sair" tooltipPosition="top"></i>Sair
+        </a>
+      </li>
     </ul>
   </div>
   <div class="router-outlet">
     <router-outlet></router-outlet>
   </div>
  </div>
- 
